--- a/features/index.html
+++ b/features/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>miniPress</title><meta name="Description" content="Build Static Sites – super easy.">
+    <title></title>
+<link rel="shortcut icon" href="/minipress/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/minipress/apple-touch-icon.png">
+<link type="image/png" sizes="32x32" href="/minipress/favicon-32x32.png">
+<link type="image/png" sizes="16x16" href="/minipress/favicon-16x16.png">
+<link rel="manifest" href="/minipress/site.webmanifest">
+<meta name="Description" content>
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/minipress/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
     <link rel="preload" href="/minipress/style.css" as="style"><link rel="preload" href="/minipress/assets/js/app.js" as="script"><link rel="preload" href="/minipress/assets/js/page--85a15be2.js" as="script"><link rel="prefetch" href="/minipress/10.style.css"><link rel="prefetch" href="/minipress/32.style.css"><link rel="prefetch" href="/minipress/assets/js/17.js"><link rel="prefetch" href="/minipress/assets/js/18.js"><link rel="prefetch" href="/minipress/assets/js/19.js"><link rel="prefetch" href="/minipress/assets/js/20.js"><link rel="prefetch" href="/minipress/assets/js/21.js"><link rel="prefetch" href="/minipress/assets/js/22.js"><link rel="prefetch" href="/minipress/assets/js/23.js"><link rel="prefetch" href="/minipress/assets/js/24.js"><link rel="prefetch" href="/minipress/assets/js/25.js"><link rel="prefetch" href="/minipress/assets/js/26.js"><link rel="prefetch" href="/minipress/assets/js/27.js"><link rel="prefetch" href="/minipress/assets/js/28.js"><link rel="prefetch" href="/minipress/assets/js/29.js"><link rel="prefetch" href="/minipress/assets/js/30.js"><link rel="prefetch" href="/minipress/assets/js/31.js"><link rel="prefetch" href="/minipress/assets/js/32.js"><link rel="prefetch" href="/minipress/assets/js/page--0465cf8d.js"><link rel="prefetch" href="/minipress/assets/js/page--0783e11c.js"><link rel="prefetch" href="/minipress/assets/js/page--1852cd38.js"><link rel="prefetch" href="/minipress/assets/js/page--323ede5c.js"><link rel="prefetch" href="/minipress/assets/js/page--361ef137.js"><link rel="prefetch" href="/minipress/assets/js/page--43fa1dd0.js"><link rel="prefetch" href="/minipress/assets/js/page--4dcd7602.js"><link rel="prefetch" href="/minipress/assets/js/page--651c311e.js"><link rel="prefetch" href="/minipress/assets/js/page--90f8fd5e.js"><link rel="prefetch" href="/minipress/assets/js/page--99b23164.js"><link rel="prefetch" href="/minipress/assets/js/page--a717f3f8.js"><link rel="prefetch" href="/minipress/assets/js/page--af13e4d8.js"><link rel="prefetch" href="/minipress/assets/js/page--b55b5a58.js"><link rel="prefetch" href="/minipress/assets/js/page--c9680e70.js"><link rel="prefetch" href="/minipress/assets/js/page--e6d50b2e.js">
     <link rel="stylesheet" href="/minipress/style.css">
   </head>
